<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Este es el View que actuará como fondo degradado -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="207dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/entreno_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_button_mb"
                android:padding="10dp"
                android:text="@string/ver_entrenamiento_del_d_a"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rutina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_button_mb"
                android:padding="10dp"
                android:text="@string/ver_rutina_semanal"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dieta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_button_mb"
                android:padding="10dp"
                android:text="@string/ver_plan_nutricional"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCambiarObjetivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cambiar Objetivo"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/gradient_button_mb"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/dieta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/gradient_button_logout"
                android:padding="10dp"
                android:text="@string/logout"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
